# tinyML

./: .gitignore  CMakeLists.txt  LICENSE.MD  ML.h  README.md  Statistics.h
.github/workflows/: ci.yml
NeuralNetwork/: Agent.h  NN.cpp  NN.h  Network.cpp  Network.h  model.h
include/: Model.h  NN.h  Network.h  Perceptron.h  VectorOperations.h  VectorStatistics.h  common.h  logger.h
src/: NN.cpp  Network.cpp
tests/: test_perceptron.cpp
